<resources>
    <string name="app_name">3App</string>
    <string name="ringtones">ringtones</string>
    <string name="collection">Collection</string>
    <string name="flashcalls">flashcalls</string>
    <string name="live">live</string>
    <string name="flash_calls">Flash Calls</string>
    <string name="see_all">See all</string>
    <string name="live_">Live</string>
    <string name="new_">New</string>
    <string name="all_">All</string>
    <string name="allRecomendation">All recommendation</string>
    <string name="top100">TOP 100</string>
    <string name="calm">Calm</string>
    <string name="Abstract">Abstract</string>
    <string name="flashTunes">FlashTunes</string>
    <string name="boostYourMood">boost your mood</string>
    <string name="share_flash">Share</string>
    <string name="download_flash">Download</string>
    <string name="liveCategories">Live Categories</string>
    <string name="splashMessage1">Ringtones for Android</string>
    <string name="splashMessage2"><![CDATA[Ringtones & Animations]]></string>
    <string name="splashMessageHeader2">Connecting</string>
    <string name="splashMessage3">to database</string>
    <string name="welcomeTo">welcome to</string>
    <string name="ringtonesforAndroid">Ringtones \nfor Android</string>
    <string name="GladSeeYou">Glad to see\nyou\nagain!</string>
    <string name="install">Install</string>
    <string name="loremipsum">"Lorem ipsum dolor sit amet? \n Pertinax nec, in mei nostrum omittantur. Quo no orem ipsum dolor "</string>
    <string name="abstractCategories">Abstract categories</string>
    <string name="allCategories">All categories</string>
    <string name="newCategories">NewCategories</string>
    <string name="calmCategories">Calm categories</string>
    <string name="popularCategories">Popular categories</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thusday">thusday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="successfullySavedWallpaper">Congratulations!\nYou have successfully saved %1$s</string>
    <string name="thanks">Thanks</string>
    <string name="notification_download_wallpaper">Loading wallapaper</string>
    <string name="common_folder">Other</string>
    <string name="ringtones_">Ringtones</string>
    <string name="ringtonesforAndroid2">Ringtones for Android</string>
    <string name="setAsRingtone">Set as a ringtone</string>
    <string name="setContactRingtone">Set contact ringtone</string>
    <string name="setAsNotification">Set as notification sound</string>
    <string name="setAsAlarm">Set as an alarm ringtone</string>
    <string name="download_ringtone">Download</string>
    <string name="permissions">Permissions</string>
    <string name="settingsPermissionMessage1">To be able to use this sound, you need to give the following permissions:</string>
    <string name="settingsPermissionMessage2">Changing system settings</string>
    <string name="settingsPermissionMessage3">This permission will allow the application to set a ringtone, sms/notification and alarm clock</string>
    <string name="allow">Allow</string>
    <string name="selectContact">Select a Contact</string>
    <string name="wallpaper">wallpaper</string>
    <string name="ringtone">ringtone</string>
    <string name="flashCall">flash call</string>
    <string name="listen">Listen</string>
    <string name="ringtone_">Ringtone</string>
    <string name="ringtone_downloaded_to">Downloaded in:</string>
    <string name="install_wallpaper">Install wallpaper</string>
    <string name="loadingWallpaper">Loading wallpaper</string>
    <string name="systemScreen">System screen</string>
    <string name="lockScreen">Lock screen</string>
    <string name="both">Lock screen and System screen</string>
    <string name="installWallpaper">How do you want to set the wallpaper?</string>
    <string name="wallpaper_description">mobidoo app live wallpaper</string>
    <string name="cancel">Cancel</string>
    <string name="answer">Answer</string>
    <string name="settings">Settings</string>
    <string name="settingsClearCache">Clear cache</string>
    <string name="settingsInvite">Invite friends</string>
    <string name="settingsRateUs">Rate us</string>
    <string name="settingsSupport">Support</string>
    <string name="settingsUseCond">Use conditions</string>
    <string name="settingsPrivacy">Privacy policy</string>
    <string name="shareLink">Share app link</string>
    <string name="loadingFlashCall">Loading Flash Call</string>
    <string name="call_on_hold">Hold</string>
    <string name="hold_call">hold call</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="is_calling">Calling</string>
    <string name="dialing">Dialling</string>
    <string name="call_ended">Call ended</string>
    <string name="call_ending">Ending call</string>
    <string name="ongoing_call">Ongoing call</string>
    <string name="keypad">Keypad</string>
    <string name="mute">Mute</string>
    <string name="speaker">Speaker</string>
    <string name="unmute">Unmute</string>
    <string name="resume_call">Resume</string>
</resources>