<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/ringtoneFragment"
        android:title="@string/ringtones"
        app:showAsAction="never"
        android:icon="@drawable/ic_bottom_view_ringtone_selector"/>

    <item android:id="@+id/startCollectionFragment"
        android:title="@string/collection"
        app:showAsAction="never"
        android:icon="@drawable/ic_bottom_view_collection_selector"/>

    <item android:id="@+id/flashCallFragment"
        android:title="@string/flashcalls"
        app:showAsAction="never"
        android:icon="@drawable/ic_bottom_view_flashcall_selector"/>

    <item android:id="@+id/liveWallpaperFragment"
        android:title="@string/live"
        app:showAsAction="never"
        android:icon="@drawable/ic_bottom_view_livewall_selector"/>

</menu>