<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/CustomBottomSheet"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/permissions"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settingsPermissionMessage1"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_setting_permission_dialog"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settingsPermissionMessage2"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settingsPermissionMessage3"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:padding="5dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAllowSettingPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:textAllCaps="false"
            android:background="@drawable/gradient_violet"
            android:textAlignment="center"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:layout_margin="10dp"/>
    </LinearLayout>

</FrameLayout>

