<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/CustomBottomSheet"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/installWallpaper"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetToSystemScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/systemScreen"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            style="@style/Widget.Material3.Button.TextButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetToLockScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lockScreen"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            style="@style/Widget.Material3.Button.TextButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetToBothScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/both"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            style="@style/Widget.Material3.Button.TextButton"
            />
    </LinearLayout>

</FrameLayout>

