<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/collectionBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMainSettings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/collectionBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMainSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/settings"/>

            <ImageButton
                android:id="@+id/ibBackMainSettings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMainSettings">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarMainSettings"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="68dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_white_circle_share"
                    android:src="@drawable/ic_settings_privacy"
                    android:scaleType="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_settings_privacy"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsPrivacy"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="end"
                    app:iconTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_white_circle_share"
                    android:src="@drawable/ic_settings_use_conditions"
                    android:scaleType="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_settings_use_cond"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsUseCond"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="end"
                    app:iconTint="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_white_circle_share"
                    android:src="@drawable/ic_settings_support"
                    android:scaleType="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_settings_support"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsSupport"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="end"
                    app:iconTint="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_white_circle_share"
                    android:src="@drawable/ic_settings_rateus"
                    android:scaleType="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_settings_rate_us"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsRateUs"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="end"
                    app:iconTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_white_circle_share"
                    android:src="@drawable/ic_settings_invite"
                    android:scaleType="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_settings_invite"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsInvite"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="end"
                    app:iconTint="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_white_circle_share"
                    android:src="@drawable/ic_settings_clear_cache"
                    android:scaleType="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_settings_clear_cache"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsClearCache"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="end"
                    app:iconTint="@color/white" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ad_view_settings"
                android:layout_marginTop="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>